--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,11 @@
     <description>kaddem</description>
     <properties>
         <java.version>1.8</java.version>
+        <sonar.token>squ_83b1dce908cfa30bcc494ff57df76d03b6feb2f0</sonar.token>
+        <sonar.host.url>http://192.168.50.4:9000</sonar.host.url>
     </properties>
+
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -52,6 +56,7 @@
             <version>5.7.0</version>
             <scope>test</scope>
         </dependency>
+
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
